--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,11 +19,12 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./
         file: ./Dockerfile
+        builder: ${{ steps.buildx.outputs.name }}
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/small-alpine-lbp:latest
+        cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/small-alpine-lbp:buildcache
+        cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/small-alpine-lbp:buildcache,mode=max
