--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+env:
+  DOCKER_TAG_VALUE: $(date +%s)
 jobs:
 
   build:
@@ -20,6 +21,6 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile -t ericaclbp/small-alpine-lbp:$(date +%s)
+      run: docker build . --file Dockerfile -t ericaclbp/small-alpine-lbp:${DOCKER_TAG_VALUE}
     - name: Push Docker image to registry
-      run: docker push ericaclbp/small-alpine-lbp:$(date +%s)
+      run: docker push ericaclbp/small-alpine-lbp:${DOCKER_TAG_VALUE}
